# pcl_cloud_registration

./: .gitignore  CMakeLists.txt  README.md
include/: Buffer.hpp
include/apps/: App.hpp  LiveVisualizerApp.hpp
include/nodes/: Calibrator.hpp  CalibratorAcircles.hpp  MultiCloudAndImagePairViewer.hpp  MultiSyncedCloudImageGrabberProducer.hpp  Node.hpp  Processor.hpp  Producer.hpp  SyncProcessor.hpp  Synchronizer.hpp  TimedCloudGrabberProducer.hpp  TimedDataGrabberProducer.hpp  TimedImageGrabberProducer.hpp  Viewer.hpp
include/types/: GuardedGrabber.hpp  TimedCloud.hpp  TimedCloudAndImagePair.hpp  TimedData.hpp  TimedImage.hpp  Timing.hpp
include/util/: CameraConfig.hpp  CameraExtrinsicsLoader.hpp  CameraId.hpp  KeypointSorter.hpp  Palette.hpp  SquareDetector.hpp  SquareSorter.hpp  Timer.hpp
src/: main.cpp
src/apps/: App.cpp  LiveVisualizerApp.cpp
src/nodes/: Node.cpp  Synchronizer.cpp
src/util/: CameraConfig.cpp  CameraExtrinsicsLoader.cpp  CameraIntrinsicsLoader.cpp  KeypointSorter.cpp  Logger.cpp  Palette.cpp  SquareDetector.cpp  SquareSorter.cpp  Timer.cpp
